# FLYu

./: README.md  local.properties  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/hw_monitor/: collectors.c  collectors.h  hw_monitor.c
app/src/main/java/com/yuuki/flyu/: App.java  MainActivity.java  PrefConst.java
app/src/main/java/com/yuuki/flyu/hook/: BaseHook.java  HookConst.java  ModuleMain.java
app/src/main/java/com/yuuki/flyu/hook/feature/: ClockHook.java  HwMonitorHook.java  LockScreenHook.java  MiscHook.java  StatusBarIconHook.java
app/src/main/java/com/yuuki/flyu/hook/utils/: HookLog.java  HwMonitorServer.java  TimeConvert.java
app/src/main/java/com/yuuki/flyu/ui/: Colors.java  Strings.java
app/src/main/java/com/yuuki/flyu/ui/fragment/: ConfigFragment.java  HomeFragment.java
app/src/main/java/com/yuuki/flyu/ui/widget/: BackView.java  BottomNavigation.java  DynamicSubtitleView.java  FloatButton.java  LinearLayoutPro.java  SwitchButtonPro.java
app/src/main/java/com/yuuki/flyu/utils/: DeviceInfo.java  FontHelper.java  HwMonitorManager.java  Miscellaneous.java  PrefHelper.java
app/src/main/res/animator/: fade_in.xml  fade_out.xml
app/src/main/res/layout/: activity_main.xml  fragment_config.xml  fragment_home.xml  item_collapsible.xml
app/src/main/res/raw/: liquidglass_effect.agsl
app/src/main/res/values/: colors.xml  strings.xml  styles.xml  themes.xml
gradle/wrapper/: gradle-wrapper.properties
(+33 files in other folders)
